--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
 }
 
 #body {
-    background-color: var(--cor-azulclaro);
+    background-color: var(--cor-azulescuro);
 }
 
 #rodape {
-    background-color: var(--cor-escura);
+    background-color: var(--cor-cinza);
     color: var(--cor-branco);
 }
 
